<resources>
    <string name="app_name">AndroidBaseSample</string>
    <string name="title_activity_main">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="persistent_property_saved_to_file">Persistent property, saved to\nfile</string>
    <string name="value">Value</string>
    <string name="persistent_property_saved_to_preferences">Persistent property, saved to preferences</string>
    <string name="reload">Reload</string>
    <string name="update">Update</string>
    <string name="title_persistent_properties">Persistent Properties</string>
    <string name="biometry">Biometry</string>
    <string name="biometric_login_title">Biometric login</string>
    <string name="biometric_login_description">Log in using your biometric credentials</string>
    <string name="biometric_login_negative_button">Cancel</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="login_not_performed">Login is not performed yet</string>
    <string name="biometric_login">Biometric login</string>
    <string name="login">Login</string>
    <string name="resort">Resort</string>
    <string name="message_user_item_clicked">Item with user %1$s was clicked</string>
    <string name="title_user_list">Users</string>
    <string name="base_recycler_view_adapter">Base RecyclerView Adapter</string>
    <string name="send_request">Send request</string>
    <string name="cancel">Cancel</string>
    <string name="failed_attempt_count">Emulated failed attempt count: %1$d</string>
    <string name="take_into_account_network_state">Take into account network state</string>
    <string name="title_retry">Retryable executor sample</string>
    <string name="retryable_executor">Retryable executor</string>
</resources>