<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".screens.main.MainActivity"
    tools:showIn="@layout/activity_retry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal">

        <TextView
            android:id="@+id/failedAttemptCountLabelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/failed_attempt_count" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/failedAttemptCountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            app:layout_constraintTop_toBottomOf="@id/failedAttemptCountLabelView" />

        <CheckBox
            android:id="@+id/takeIntoAccountNetworkStateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/take_into_account_network_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/failedAttemptCountLabelView" />

        <Button
            android:id="@+id/sendRequestButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/send_request"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/takeIntoAccountNetworkStateView" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sendRequestButton"
            app:layout_constraintTop_toTopOf="@id/sendRequestButton" />

        <TextView
            android:id="@+id/logView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/design_default_color_primary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>